Added Require Former. This will be removed in the future

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         }
     ],
     "require": {
-        "illuminate/support": "4.1.*"
+        "illuminate/support": "4.1.*",
+        "anahkiasen/former": "dev-master"
     },
     "autoload": {
         "classmap": [
